--- a/modules/Makefile
+++ b/modules/Makefile
@@ -1,6 +1,6 @@
 .PHONY: all clean
 
-CC=clang-11
+CXX=clang-11
 CXXFLAGS+=-Wall --std=c++2a
 
 # precompiled interface modules
@@ -22,13 +22,13 @@ clean:
 	$(RM) *.o *.pcm main
 
 main: $(PCMS) $(OBJS)
-	$(CC) $(CXXFLAGS) $(addprefix -fmodule-file=,$(PCMS)) $(OBJS) -o $@ -lstdc++
+	$(CXX) $(CXXFLAGS) $(addprefix -fmodule-file=,$(PCMS)) $(OBJS) -o $@ -lstdc++
 
 %.o: %.cpp
-	$(CC) $(CXXFLAGS) $(addprefix -fmodule-file=,$(PCMS)) -c $< -o $@
+	$(CXX) $(CXXFLAGS) $(addprefix -fmodule-file=,$(PCMS)) -c $< -o $@
 
 %_i.o: %.pcm
-	$(CC) $(CXXFLAGS) $(addprefix -fmodule-file=,$(PCMS)) -c $< -o $@
+	$(CXX) $(CXXFLAGS) $(addprefix -fmodule-file=,$(PCMS)) -c $< -o $@
 
 %.pcm: %.cppm
-	$(CC) $(CXXFLAGS) $(addprefix -fmodule-file=,$(subst $<,,$+)) --precompile $< -o $@
+	$(CXX) $(CXXFLAGS) $(addprefix -fmodule-file=,$(subst $<,,$+)) --precompile $< -o $@
